# Code-Optimization-in-C-

./: .gitignore  CMakeLists.txt  lecture_1_matrix_mul.cc  lecture_1_matrix_mul.h  matrix_multiplication.cc  readme.md
Lecture1/: CMakeLists.txt  matrix_mul.cc  matrix_mul.h
Lecture1/src/: matrix_mul.cc
Lecture6/: CMakeLists.txt  main.cc
Lecture6/include/: main.h  parallelization.h
Lecture6/src/: main.cc  parallelization.cc
misc/: main.cc  main.s
